-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
None
-
-
6c36d341e (dev), 49713d5ef (6.8)
Tested on Linux and macOs but possibly exists in Windows as well.
Issue: Crash happens when start dragging a section (for example column header view) starting from a position close to the borders.
Steps to Reproduce:
- Run the spreadsheet example
- Drag a column/row starting from a position close to the borders
EXPECTED:
- Start dragging the column/row, OR
- No dragging happen
ACTUAL: The application crashes immediately
For Gerrit Dashboard: QTBUG-127782 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
581686,5 | Fix crash when dragging an invalid item in the header view | dev | qt/qtdeclarative | Status: MERGED | +2 | -1 |
582375,2 | Fix crash when dragging an invalid item in the header view | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |