Fix crash when dragging an invalid item in the header view

Dragging an invalid item in the header view leads to a crash. It's
better to safeguard before operating anything w.r.t. to the dragged
item.

This patch fixes that issue by validating the invalid item before
performing drag operation. Also added an test case to verify the same.

Fixes: QTBUG-127782
Change-Id: I95398c7410d6fb6427ec06ff4b7da42472bc6d18
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
Reviewed-by: MohammadHossein Qanbari <mohammad.qanbari@qt.io>
(cherry picked from commit 6c36d341e02fdcd51f23c731bc8762fb3f8a0900)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>